<resources>
    <string name="app_name">CookingBook</string>
    <string name="add_recipe">Add recipe</string>
    <string name="view_reciple">Recipes</string>
    <string name="search_recipe">Search</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="name_recipe_label">Name:</string>
    <string name="description_recipe_label">Description:</string>
    <string name="add_foto">Add foto recipe</string>
    <string name="edit_foto">Edit foto recipe</string>
    <string name="fill_form">Fill all fields!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go Back</string>
    <string name="edit">Edit</string>
    <string name="search">Search:</string>
</resources>
