<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_recipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_recipe_submitAddRecipeActivity"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />

    <TextView
        android:id="@+id/name_recipe_labelAddRecipeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name_recipe_label"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/description_recipe_labelAddRecipeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_textAddRecipeActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/description_recipe_label"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name_textAddRecipeActivity"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/name_recipe_labelAddRecipeActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text"/>

    <EditText
        android:id="@+id/description_textAddRecipeActivity"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/description_recipe_labelAddRecipeActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text"/>

    <Button
        android:id="@+id/add_fotoAddRecipeActivity"
        style="@style/ButtonStyle"
        android:layout_below="@id/description_textAddRecipeActivity"
        android:text="@string/add_foto"/>

    <Button
        android:id="@+id/cancelAddRecipeActivity"
        style="@style/ButtonStyle"
        android:layout_below="@id/add_fotoAddRecipeActivity"
        android:text="@string/cancel"/>

</RelativeLayout>